--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "0.19.0",
     "command-exists": "1.2.8",
-    "valid-url": "^1.0.9"
+    "valid-url": "1.0.9"
   }
 }
